# cpp-rational

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: rational.cpp  rational.h
tests/: ts1.cpp
